app/scss/_media.scss
/* ... */
@media (max-width: 1220px) {
   
   .specifications__box-1::before {
      width: 455px;
      height: 100px;      
      right: -272px;
      bottom: 55px;
   }

   .specifications__box-2::before {
      width: 352px;
      height: 70px;      
      right: -328px;
      bottom: 128px;
   }
   
   .specifications__box-3::before {
      width: 380px;
      height: 89px;
      right: 211px;
      bottom: 21px;
   }   

   .specifications__box-4::before {
      width: 402px;
      height: 255px;
      right: 164px;
      bottom: -4px;
  }
}

@media (max-width: 1140px) {

   .benefits__items {
      display: block;
      margin-left: 60px;
   }
   
   .benefits__item {
      width: 88%;
      margin-bottom: 40px;
      
      &::before,
      &:nth-child(2)::before,
      &:nth-child(3)::before {
         bottom: 0;
      }

      &:nth-child(4)::before {
         bottom: 11px;         
      }

      &:nth-child(even) {
         margin-left: 15%;
      }

      &:nth-child(3) {
         transform: translateX(0);
      }

      &:last-child {
         transform: translateX(0);
         margin-bottom: 25px;         
      }

      &:first-child::after,
      &:nth-child(2)::after,
      &:nth-child(3)::after {
         display: none;
      }
   }

   .benefits__info {
      width: 60%;

      &:last-child {
         width: 60%;
      }
   }

   .specifications__box-2::before {
      width: 365px;
      height: 68px;
  }   

  .questions__item:nth-child(3)::before {
      width: 220px;
      height: 86px;
      top: -24px;
      right: -290px;
      background-image: url('../images/questions-bg.220w.png');
  }

  .webp .questions__item:nth-child(3)::before {
      width: 220px;
      height: 86px;
      top: -24px;
      right: -290px;
      background-image: url('../images/questions-bg.220w.webp');
   }

}

@media (max-width: 1100px) {

   .header {           
      background-color: rgba(#000, 0.6);
      top: 0;
      padding: 15px 0;
   }

   .header__button {      
      right: 60px;
      top: 20px;
      margin-right: 0;
      position: absolute;
   }

   .logo {
      padding-top: 5px;
   }

   .menu {
      order: 1;
   }

   .menu__list {
      position: fixed;
      left: 0;
      top: 0;
      right: 3px;
      bottom: 0;
      background-color: rgba(#1C1C1C, 0.9);
      display: flex;
      flex-direction: column;
      justify-content: center;
      padding: 32% 0 21% 30px;
      z-index: -1;
      transform: translateX(100%);
      transition: all 0.3s ease-in;
      // overflow: auto;
   }

   .menu__list-item {
      display: block;  
      margin-bottom: 30px;  
   }
   
   .menu__list-item + .menu__list-item {
      margin-left: 0;      
   }
   
   .menu__list-item:first-child {
      margin-top: auto;
   }
   
   .menu__list-item:last-child {
      position: relative;
      margin: auto 0;
      padding: 33px 0;
      &::before {
         content: '';
         position: absolute;
         border: 1px solid rgba(#fff, 0.24);
         top: 0;
         left: -30px;
         right: 0;
      }
   }
   
   .menu__list-link,
   .menu__list-phone {
      display: block;
      padding: 15px 0;
   }

   .menu__list-link:hover,
   .menu__list-phone:hover {
      background-image: linear-gradient(to right, rgba(#fff,  0.24), rgba(#fff, 0) 80%);
      color: rgba(#000, 0.4);
   }

   .menu__list-link {
      position: relative;
   
      &::after {
         display: none;
      }

      &:hover::after,
      &:focus::after {
         display: none;
      }
   }

   .menu__list--active {
      transform: translateX(0);      
   }

   .menu__btn {
      display: block;
      background-color: transparent;
      border: none;
      outline: none;
      padding: 0;
      cursor: pointer;
   }
   
   .menu__btn::before,
   .menu__btn::after {
      content: '';
      width: 24px;
      height: 2px;
      background-color: #E0E0E0;
      display: block;
      margin-bottom: 4px;
      transition: transform 0.3s ease-in;
   }

   .menu__btn::after {
      margin-bottom: 0;
      width: 16px;
      margin-left: auto;
   }

   .menu__btn-line {
      display: block;
      background-color: #E0E0E0;
      width: 24px;
      height: 2px;
      margin-bottom: 4px;
      opacity: 1;
      transition: opacity 0.3s ease-in;
   }
   
   .menu__btn.menu__btn--active {
      
      .menu__btn-line {
         opacity: 0;
         transition: opacity 0s;
      }

      &::after {
         width: 24px;
         transform: translateY(-6px) rotate(-135deg);
      }
      
      &::before {
         transform: translateY(6px) rotate(135deg);
      }
   }

   .header__phone {
      display: none;
   }
}

@media (max-width: 1070px) {

   .specifications__box-1::before {
      width: 385px;
      height: 67px;
      right: -294px;
      bottom: 41px;
   }

   .specifications__box-2::before {
      width: 371px;
      height: 56px;
      bottom: 130px;
   }
   
   .specifications__box-3::before {
      width: 309px;
      height: 68px;
      right: 203px;
      bottom: 6px;
   }   

   .specifications__box-4::before {
      width: 287px;
      height: 204px;
      right: 203px;
      bottom: 24px;
   }

   .specifications__item:nth-child(2) {
      transform: translateY(-47px);
   }

   .specifications__box-1 {
      margin-bottom: 60px;
   }

   .specifications__item:nth-child(3) > .specifications__box-3 {
      margin-bottom: 103px;
   }

   .card__title {
      @include fontStyle(500, 25, 1.5);  
      margin-top: 20px; 
      margin-bottom: 20px;   
   }
}

@media (max-width: 1040px) {

   .questions__items {
      max-width: 88%;
   }

   .questions__item {
      max-width: 100%;
   }  

   .questions__item:nth-child(3)::before {
      display: none;
   }

   .questions__item-title {
      @include fontStyle(500, 18); 
      padding-top: 20px;
      padding-bottom: 20px;
   }

   .questions__item-title::after {
      width: 61px;
      height: 60px;
      right: -61px;
   }
}
/* ... */

